# emotion-qwen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  config.yaml  pyproject.toml
data/: emotion_examples.json
data/steering_poems/: afraid.txt  angry.txt  baseline.txt  calm.txt  desperate.txt  guilty.txt  happy.txt  inspired.txt  loving.txt  nervous.txt  proud.txt  results.json  sad.txt  surprised.txt
data/stories/: emotion_stories.json  emotion_stories_v1.json  neutral_texts.json  neutral_texts_v1.json
scripts/: 01_generate_stories.py  02_verify_story_lengths.py  03_extract_vectors.py  04_verify_vectors.py  05_inspect_stories.py  05_launch_ui.py  06_validate_emotion_probes.py  07_steering_poem_experiment.py  08_logit_lens.py  _test_scenarios.py  verify_nnsight.py
src/emotion_probe/: config.py
src/emotion_probe/backend/: base.py  local_nnsight.py  modal_vllm.py
src/emotion_probe/probe/: activation_recorder.py  emotion_vectors.py  neutral_generation.py  noise_removal.py  story_generation.py
src/emotion_probe/ui/: app.py  components.py
