[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotion-probe"
version = "0.1.0"
description = "Emotion vector probing for Qwen3-4B, reproducing Anthropic's 2026 Emotion Concepts paper"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "accelerate>=0.33",
    "nnsight>=0.3",
    "anthropic>=0.34",
    "gradio>=4.42",
    "plotly>=5.23",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
